                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 13-03-2005 changed: Replaced all VECFILEITEMS with CFileItemList
  - 13-03-2005 added: VideoPlayer.Genre, VideoPlayer.Year, VideoPlayer.Directory for infolabels/infofadelabels.
  - 13-03-2005 fixed: weather broken since last update
  - 12-03-2005 changed: code cleanup, removing unnecessary inlcudes, making more use of precompiled headers
  - 12-03-2005 changed: moved cddb info reading into a tag loader
  - 12-03-2005 changed: <label> tag is tested using IsNaturalNumber() rather than testing for alphabetical first character now.  Allows non-alphabetical labels.
  - 12-03-2005 fixed: Black small movie window if video is paused before switching to GUI.
  - 12-03-2005 changed: Freed up unused memory in HQ pixel shader render method when in GUI mode.
  - 11-03-2005 changed: moved decision of what seeking to do into player and added workaround for files wich mplayer can't determin current percentage for.
  - 11-03-2005 fixed: the correct item is now highlighted when using Autoswitching with large icons in Video and Pictures
  - 11-03-2005 changed: Removed GetPTS and unified what m_pPlayer->GetTime returns. It now always returns time in milliseconds.
  - 11-03-2005 fixed: dialogs sometimes didn't popup via ActivateWindow() in <execute> tags.
  - 11-03-2005 fixed: ButtonMenu wasn't rendered if no label control was present.
  - 11-03-2005 fixed: mplayer wasn't freed after a playlist had ended.