@@ -125,6 +125,8 @@ bool CGUIDialogProgress::OnMessage(CGUIMessage& message)
 
 void CGUIDialogProgress::SetPercentage(int iPercentage)
 {
+  if (iPercentage < 0) iPercentage = 0;
+  if (iPercentage > 100) iPercentage = 100;
 	CGUIProgressControl* pControl = (CGUIProgressControl*)GetControl(CONTROL_PROGRESS_BAR);
 	if (pControl) pControl->SetPercentage(iPercentage);
 }
